--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     container_name: jenkins
     environment:
-    - DOCKER_TLS_VERIFY=1
+    - DOCKER_TLS_VERIFY:1
     ports:
       - 8080:8080
       - 50000:50000
@@ -13,21 +13,21 @@ services:
       - jenkins-docker-certs:/certs/client:ro
       - jenkins-data:/var/jenkins_home
     networks:
-       mynetwork:
+     - mynetwork
   mydb:
     image: mysql:5.7
     restart: always
     container_name: mysql
     environment:
-    - MYSQL_ROOT_USERNAME=raja
-    - MYSQL_ROOT_PASSWORD=12345
-    - MYSQL_DATABASE=imprint_db
+    - MYSQL_ROOT_USERNAME:raja
+    - MYSQL_ROOT_PASSWORD:12345
+    - MYSQL_DATABASE:imprint_db
     ports:
       - 3306:3306
     volumes:
       - db_data:/var/db
     networks:
-       mynetwork:
+     - mynetwork
 volumes:
    jenkins-docker-certs:
    jenkins-data:
@@ -35,3 +35,4 @@ volumes:
 networks:
    mynetwork:
       driver: bridge
+
