--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3.1'
+version: "3.7"
+
 services:
   myjenkins:
     image: raja9658/myjenkins:1
@@ -13,26 +14,30 @@ services:
       - jenkins-docker-certs:/certs/client:ro
       - jenkins-data:/var/jenkins_home
     networks:
-     - mynetwork
-  mydb:
+     - mysql
+
+  mysqldb:
     image: mysql:5.7
-    restart: always
     container_name: mysql
+    restart: always
     environment:
-    - MYSQL_ROOT_USERNAME:raja
-    - MYSQL_ROOT_PASSWORD:12345
-    - MYSQL_DATABASE:imprint_db
+      MYSQL_ROOT_PASSWORD: root@121022
+      MYSQL_DATABASE: imprint_db
     ports:
       - 3306:3306
     volumes:
-      - db_data:/var/db
+      #local dir/files: docker dir/files
+      - mysql_db:/var/lib/mysql
+      - backup:/backup
     networks:
-     - mynetwork
+      - mysql
+
 volumes:
    jenkins-docker-certs:
    jenkins-data:
-   db_data:
-networks:
-   mynetwork:
-      driver: bridge
+   backup:
+   mysql_db:
 
+networks:
+  mysql:
+    driver: bridge
